centering divs practce

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Do you know what this area of the brain does?</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> The brain is modularish</h1>
-    <p>
-        What part of the brain does what and why should you care.
-    </p>
+    <div>
+        <h1> The brain is modularish</h1>
+    </div>
+    <div>
+       <p>
+             What part of the brain does what and why should you care.
+       </p>
+    </div>
+    
     <img> 
 </body>
 </html>
