--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
              What part of the brain does what and why should you care.
        </p>
     </div>
+    <div><img src="./assets/brain lobes anatomy.jpg"></div>
     
-    <img> 
+</img>
 </body>
 </html>
