remembering that divs are boxes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     </div>
     <div><img src="./assets/brain lobes anatomy.jpg"></div>
     
+    <div><button onclick>Frontal Lobe</button></div>
+    <div><button onclick>Parietal Lobe</button></div>
+    <div><button onclick>Temporal Lobe</button></div>
+    <div><button onclick>Occipital Lobe</button></div>
+    <div><button onclick>Spinal Cord</button></div>
+    <div><button onclick>Cerebellum</button></div>
+
+    <div></div>
+    
 </img>
 </body>
 </html>
