--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div><button id="occipitalLobe">Occipital Lobe</button></div>
     <div><button id="spinalCord">Spinal Cord</button></div>
     <div><button id="cerebellum">Cerebellum</button></div>
-
-    <div></div>
+   <br></br>
+    <div><footer>For more information</footer></div>
     
 </img>
 <script src='./assets/js/index.js'></script>
